--- a/package.json
+++ b/package.json
@@ -8,23 +8,22 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
-    "bcrypt-nodejs": "^0.0.3",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "ejs": "~2.6.1",
-    "exceljs": "^4.1.1",
     "express": "~4.16.1",
-    "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
-    "moment": "^2.29.1",
     "mongoose": "^5.10.11",
     "morgan": "~1.9.1",
+    "bcrypt-nodejs": "^0.0.3",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "express-session": "^1.17.1",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "connect-flash": "^0.1.1",
+    "exceljs": "^4.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
